Aligned log out button to right using flex. Theme changing button should no longer overlap the log out button

--- a/front/src/Screens/screens.css
+++ b/front/src/Screens/screens.css
@@ -27,3 +27,11 @@
     border-radius: 5px;
     color: white; 
 }
+
+
+.logout-button {
+    display: flex; 
+    justify-content: flex-end;
+    margin: 15px;
+    
+}
